update public folder

--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="pl_pl">
   <head>
-    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/avatar.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>księgowość</title>
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <title>fakturowanie</title>
   </head>
   <body>
     <div id="root"></div>
